# bad-minecraft-clone

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Block.h  Block.hpp  Camera.hpp  Chunk.hpp  Shader.hpp  Universe.hpp  ViewPortal.hpp
include/glad/: glad.h
lib/: .gitignore
shaders/: fragment.fs  vertex.vs
src/: Block.cpp  Camera.cpp  Chunk.cpp  Shader.cpp  Universe.cpp  glad.c  main.cpp
